code quality, libs upgrade